--- a/src/main/resources/fdfs_client.conf
+++ b/src/main/resources/fdfs_client.conf
@@ -1,5 +1,5 @@
 connect_timeout=60
 network_timeout=60
 charset=UTF-8
-http.tracker_http_port=8090
-tracker_server=47.93.39.98:22122
+http.tracker_http_port=8888 //you port.用来显示文件
+tracker_server=******   //你的fastdfs网址
